# backend/docs/swagger.json
@@ -97,6 +97,11 @@
         },
         "/hackathons": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Получение списка всех хакатонов",
                 "consumes": [
                     "application/json"
@@ -121,6 +126,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Создание нового хакатона",
                 "consumes": [
                     "application/json"
@@ -152,6 +162,11 @@
         },
         "/hackathons/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Получение хакатона по ID",
                 "consumes": [
                     "application/json"
@@ -182,6 +197,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Обновление данных хакатона",
                 "consumes": [
                     "application/json"
@@ -221,6 +241,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Удаление хакатона по ID",
                 "consumes": [
                     "application/json"
@@ -251,7 +276,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "-",
+                "description": "Возвращает список всех пользователей.",
                 "consumes": [
                     "application/json"
                 ],
@@ -261,7 +286,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Get all users",
+                "summary": "Получить всех пользователей",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -274,13 +299,13 @@
                     }
                 }
             },
-            "put": {
+            "post": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "-",
+                "description": "Создаёт нового пользователя в системе.",
                 "consumes": [
                     "application/json"
                 ],
@@ -288,12 +313,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "user"
                 ],
-                "summary": "Create a new user",
+                "summary": "Создать нового пользователя",
                 "parameters": [
                     {
-                        "description": "User data",
+                        "description": "Данные пользователя",
                         "name": "user",
                         "in": "body",
                         "required": true,
@@ -316,7 +341,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "-",
+                "description": "Возвращает список всех пользователей и их хакатонов.",
                 "consumes": [
                     "application/json"
                 ],
@@ -326,7 +351,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Get all users",
+                "summary": "Получить всех пользователей с хакатонами",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -347,7 +372,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "ID",
+                "description": "Возвращает информацию о пользователе по заданному ID.",
                 "consumes": [
                     "application/json"
                 ],
@@ -357,11 +382,11 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Get user by ID",
+                "summary": "Получить пользователя по ID",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "User ID",
+                        "description": "ID пользователя",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -373,6 +398,15 @@
                         "schema": {
                             "$ref": "#/definitions/internal_api_http_v1_user.Response"
                         }
+                    },
+                    "404": {
+                        "description": "User not found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
                     }
                 }
             },
@@ -380,9 +414,12 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "AdminRole": []
                     }
                 ],
-                "description": "ID",
+                "description": "Удаляет пользователя по заданному ID.",
                 "consumes": [
                     "application/json"
                 ],
@@ -392,11 +429,11 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Delete user by ID",
+                "summary": "Удалить пользователя по ID",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "User ID",
+                        "description": "ID пользователя",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -405,6 +442,15 @@
                 "responses": {
                     "204": {
                         "description": "No Content"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
                     }
                 }
             }
@@ -416,7 +462,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": ",    ID",
+                "description": "Добавляет хакатон пользователю по ID.",
                 "consumes": [
                     "application/json"
                 ],
@@ -426,18 +472,18 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Add hackathon to user",
+                "summary": "Добавить хакатон пользователю",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "User ID",
+                        "description": "ID пользователя",
                         "name": "userId",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "integer",
-                        "description": "Hackathon ID",
+                        "description": "ID хакатона",
                         "name": "hackathonId",
                         "in": "path",
                         "required": true
@@ -446,6 +492,15 @@
                 "responses": {
                     "204": {
                         "description": "No Content"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
                     }
                 }
             }
