# backend/internal/api/http/v1/hackathon/routers.go
@@ -1,16 +1,18 @@
 package hackathon
 
 import (
+	"hackathons-app/internal/api/http/v1/auth"
+
 	"github.com/gin-gonic/gin"
 )
 
-func RegisterRouters(engine *gin.Engine, handler *Handler) {
+func RegisterRouters(engine *gin.Engine, handler *Handler, a *auth.Auth) {
 	router := engine.Group("/hackathons/")
 	{
-		router.GET(":id", handler.GetById)
-		router.GET("", handler.GetAll)
-		router.POST("", handler.Create)
-		router.DELETE(":id", handler.DeleteById)
-		router.PATCH(":id", handler.Update)
+		router.GET(":id", a.AuthorizedUser, handler.GetById)
+		router.GET("", a.AuthorizedUser, handler.GetAll)
+		router.POST("", a.AuthorizedUser, handler.Create)
+		router.DELETE(":id", a.OnlyAdmin, handler.DeleteById)
+		router.PATCH(":id", a.OnlyAdmin, handler.Update)
 	}
 }
